Fix alignment of inline select inputs

--- a/src/styl/form.styl
+++ b/src/styl/form.styl
@@ -43,8 +43,10 @@ input[type='checkbox']:checked:after
   margin-top 15px
   &.inline
     display inline-block
-    width 48%
+    width 49%
     margin-right 2%
+    &:last-child
+      margin-right 0
   select
     background transparent
     border none
